--- a/src/global.css
+++ b/src/global.css
@@ -11,6 +11,10 @@
   --green-300: #00986f;
   --green-500: #00875f;
 }
+:focus {
+  outline: transparent;
+  box-shadow: 0 0 0 2px var(--green-500);
+}
 
 * {
   margin: 0;
